# lookup

./: .gitignore  CMakeLists.txt  README.md
include/: lookup.h
src/: CMakeLists.txt  lookup.c
src/examples/: CMakeLists.txt  basic_usage.c  custom_deallocator.c  pushing_after_lookup.c
